--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -52,7 +52,7 @@
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
                 {% endif %}
-                <li><a href="#">0.4.1-dev</a></li>
+                <li><a href="#">0.4.1</a></li>
             </ul>
 
             <!-- Left Nav Section -->
