--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -31,14 +31,16 @@
             <ul class="right">
                 {% if app.user %}
                 <li class="has-form">
-                    <div class="row collapse">
-                        <div class="large-8 small-9 columns">
-                            <input type="text" placeholder="Find Stuff">
+                    <form method="post" action="{{ path('search_index') }}">
+                        <div class="row collapse">
+                            <div class="large-8 small-9 columns">
+                                <input type="text" id="freetext" name="freetext" placeholder="Find Stuff">
+                            </div>
+                            <div class="large-4 small-3 columns">
+                                <input type="submit" class="alert button expand" value="Search" />
+                            </div>
                         </div>
-                        <div class="large-4 small-3 columns">
-                            <a href="#" class="alert button expand">Search</a>
-                        </div>
-                    </div>
+                    </form>
                 </li>
                 <li><a id="player-toggle" class="radius button">Player</a></li>
                 <li class="divider"></li>
@@ -52,7 +54,7 @@
                 <li><a href="{{ path('account_login') }}">Login</a></li>
                 <li class="active"><a href="{{ path('account_register') }}">Register</a></li>
                 {% endif %}
-                <li><a href="#">0.4.1</a></li>
+                <li><a href="#">0.5-dev</a></li>
             </ul>
 
             <!-- Left Nav Section -->
