--- a/src/Dahlberg/PodrBundle/Resources/views/Episode/details.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Episode/details.html.twig
@@ -26,8 +26,10 @@
             <div class="row">
                 <div class="large-12 text-center columns">
                     <ul class="button-group round">
-                        {% if userEpisode and userEpisode.getArchived %}
+                        {% if userEpisode is null %}
                             <li><a href="{{ path('episode_restore', {'id': episode.getId}) }}" class="button tiny success">Add</a></li>
+                        {% elseif userEpisode.getArchived %}
+                            <li><a href="{{ path('episode_restore', {'id': episode.getId}) }}" class="button tiny success">Restore</a></li>
                         {% else %}
                             <li><a href="{{ path('episode_archive', {'id': episode.getId}) }}" class="button tiny alert">Archive</a></li>
                         {% endif %}
