--- a/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
+++ b/src/Dahlberg/PodrBundle/Resources/views/Podcast/details.html.twig
@@ -82,6 +82,7 @@
                 <thead>
                 <tr>
                     <th>Title</th>
+                    <th width="100">Status</th>
                     <th width="100">Published</th>
                 </tr>
                 </thead>
@@ -89,6 +90,7 @@
                 {% for episode in podcast.getEpisodes %}
                     <tr>
                         <td><a href="{{ path('episode_details', {'id': episode.getId}) }}">{{ episode.getTitle }}</a></td>
+                        <td>{% if episode.getUserEpisode(user) is not null and episode.getUserEpisode(user).getArchived == false %}Unarchived{% endif %}</td>
                         <td>{% if episode.getPublishedDate %}{{ episode.getPublishedDate|date('Y-m-d') }}{% else %}-{% endif %}</td>
                     </tr>
                 {% endfor %}
