+ Minor dashboard UI improvements

--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -57,3 +57,10 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+/* Utils
+-------------------------------------*/
+.one-liner {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
