+ Working playlist index

--- a/src/Dahlberg/PodrBundle/Resources/public/css/application.css
+++ b/src/Dahlberg/PodrBundle/Resources/public/css/application.css
@@ -50,6 +50,12 @@
     }
 }
 
+/* Playlist
+-------------------------------------*/
+.playlist-index .playlist-list {
+    width: 100%;
+}
+
 /* Podcast
 -------------------------------------*/
 .podcast-table .podcast-title,
